Update galerie styles and fix category button spacing
Adjusted CSS variables for galerie project border gradients and added responsive widths for filter buttons. Fixed indentation for category fetching in template-galerie.php to improve code readability.

--- a/sass/layout/_galerie.scss
+++ b/sass/layout/_galerie.scss
@@ -383,3 +383,16 @@
     color: #58b5ff;
   }
 }
+
+@media (min-width: 900px) and (max-width: 1500px) {
+  .pageGalerie__filter-bar__filter-btn {
+    width: 15vw;
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  .pageGalerie__filter-bar__filter-btn {
+    width: 10vw;
+  }
+}
+
